--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h1{
 
 /*foto de inicio*/
 .fotoinicio{
-    width: 1500px;
+    width: 100vw;
     
     }
 
@@ -241,7 +241,7 @@ h3{
   /*-----FOOTER----*/
  
   footer {
-    margin: 100px 0;
+    margin-top: 100px;
     background-color: #dddaca;
     padding: 150px;
     display: flex;
